# robotics_project

./: .clang-tidy  CMakeLists.txt  README.md  package.xml
cfg/: initial_pose.yaml  parameters.cfg
include/: baseline_calculation_node.h  odometry_node.h
launch/: baseline_calculation.launch  odometry.launch
msg/: MotorSpeed.msg  OdometryCustom.msg
rviz/: odometry.rviz
src/: baseline_calculation_node.cpp  odometry_node.cpp  publish_speed.cpp
